# web-spf

./: .gitignore  Cargo.toml  FGMiniscript.spf  Monogram-light.spf  Monogram.spf  README.md  fg_miniscript.spf  index.html  web_spf.wasm
.ci/: build.js
crates/render_spf/: Cargo.toml
crates/render_spf/src/: lib.rs
js/: dom_elements.js  patch.js
pkg/: README.md  package.json  web_spf.d.ts  web_spf.js  web_spf_bg.wasm  web_spf_bg.wasm.d.ts
src/: badge.rs  build.rs  lib.rs  main.rs  print.rs
