[package]
name = "web-spf"
version = "0.1.2"
edition = "2021"
description = "SimplePixelFont rendering in the browser."
repository = "https://github.com/SimplePixelFont/web-spf"
license = "Apache-2.0"
keywords = ["spf", "simplepixelfont", "wasm", "web", "rendering", "browser", "graphics", "font"]

[lib]
crate-type = ["cdylib"]

[dependencies]
spf = { git="https://github.com/SimplePixelFont/spf.rs.git" }
render_spf = { path = "./crates/render_spf" }
ril = { version = "0.10.3", default-features = false, features = ["all-pure"] }
js-sys = "0.3.77"
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
empfindung = "0.2.6"
